web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
/**
  The purpose of this SASS is to get the support between the old legacy UI and the new.
  We bring the UI that is being used on the Different Asset Views
 */
@import "../../web-app/css/shared-legacy-angular/dates-info.sass"

.tds-angular-component-content
  display: table
  .dialog-container
    border: 1px solid transparent
    padding: 0
  .prop
    padding: 5px
  .prop .name
    text-align: left
    white-space: nowrap
    vertical-align: top
    width: 15%
  .prop .nameNW
    text-align: left
    white-space: nowrap
    vertical-align: top
  .prop .value
    text-align: left
    vertical-align: top
    width: 85%
    padding-left: 5px
  .prop .valueNW
    text-align: left
    padding-left: 5px
    width: 130px
  .prop .bundle
    text-align: left
    width: 50%
  .prop a
    color: #00E
    font-weight: bold
    cursor: pointer
  .url + .valueNW
    text-overflow: ellipsis
    overflow: hidden
    white-space: nowrap
    max-width: 90px
    a
      font-weight: bold
      color: #333!important
  table
    border-collapse: separate
    border-spacing: 2px
    padding: 0
    th
      background: #CCCCCC
      color: #000
      font-size: 13px
      font-weight: bold
      line-height: 16px
      padding: 2px 6px
    th, td
      font-size: 13px
      line-height: 12px
      padding: 4px 5px
      text-align: left
      input
        border: 1px solid #ccc
        margin: 2px 0
        padding: 2px 4px
    td .select
      width: 120px
    td.sizeScale input
      width: 40px
    td .label
      background: none repeat scroll 0% 0% #f3f4f6
      width: 10%
      padding-left: 6px
      label
        margin-top: 4px
        margin-bottom: 4px
    td .label_sm
      background: none repeat scroll 0% 0% #f3f4f6
    td .tm-input-control
      max-width: 133px
    div
      .highField
        label
          color: red !important
          font-weight: 700 !important
      .label
        display: table-cell
        text-align: initial
        vertical-align: inherit
        color: inherit
        font-weight: inherit
        font-size: 13px
        label
          color: #333
          font-size: 13px
          font-style: normal
          font-weight: normal
      input:not([disabled])
        height: 27px
      input#assetName, input#description
        width: 100%
        max-width: 100%
      input.duration
        width: 90%
      input.duration + label
        font-weight: normal
    td[data-for].Y,
    td[data-for].G,
    td[data-for].B,
    td[data-for].P,
    td[data-for].O,
    td[data-for].H,
    td[data-for].U,
    td[data-for].N
      background-color: #FFF !important

    /* YELLOW */
    td[data-for].Y .select2-choice,
    td[data-for].Y .k-widget span,
    .Y
      background-color: $color-field-yellow !important
      background-image: none !important

    /* GREEN */
    td[data-for].G .select2-choice,
    td[data-for].G .k-widget span,
    .G
      background-color: $color-field-green !important
      background-image: none !important

    /* BLUE */
    td[data-for].B .select2-choice,
    td[data-for].B .k-widget span,
    .B
      background-color: $color-field-blue !important
      background-image: none !important

    /* PINK */
    td[data-for].P .select2-choice,
    td[data-for].P .k-widget span,
    .P
      background-color: $color-field-pink !important
      background-image: none !important

    /* ORANGE */
    td[data-for].O .select2-choice,
    td[data-for].O .k-widget span,
    .O
      background-color: $color-field-orange !important
      background-image: none !important

    /* NORMAL */
    td[data-for].N.label .select2-choice,
    .N.label
      background-color: $color-field-normal !important
      background-image: none !important

    /* UNIMPORTANT */
    td[data-for].U.label .select2-choice,
    .U.label
      background-color: $color-field-unimportant !important
      background-image: none !important


    td[data-for].N .k-widget span,
    td[data-for].U .k-widget span,
      background-color: #fff !important
      background-image: none !important

    /* HIDDEN */
    td[data-for].H .select2-choice,
    .H
      background-color: #fff !important
      background-image: none !important
  table.asset-edit-view
    tr
      .truck-input-group
        display: flex
        justify-content: space-between
        input
          min-width: unset
    td
      padding: 0 6px
      height: 32px

  /* To Support k-grid inside new Angular Asset View, color is already at Kendo Level, do not modify here */
  .dependents-grid,
  .task-comment-grid,
  .successor-predecessor-table
    max-height: 210px
    .k-grid-header th.k-header
      color: #656565
      background-color: #f6f6f6
      padding: 5px 0px 0px 10px
    .k-grid-header .k-header:nth-child(1)
      text-align: center
    .k-grid-toolbar
      padding-bottom: 1px !important
      font-size: 14px
      .btn-add-new-dependency
        height: 24px
        width: 59px
        .fa
          width: 17px
          margin-left: -6px
        span
          position: relative
          top: -1px
    .k-grid-container
      .k-grid-norecords
        td
          text-align: center
    div.action-button-list
      button.btn-action
        width: 40px
        padding-left: 12px
      button.btn-comment
        .glyphicon-plus
          margin-left: -13px
          top: 6px
          font-size: 8px
          color: $color--green2
        .glyphicon-pencil
          margin-left: -17px
          top: 6px
          font-size: 9px
          color: $color--green2
      button.btn-delete
        margin-left: 5px
  .dependents-grid.is-dependent-on
    margin-top: 10px
  .swapper-image
    &::before
      content: ''
      cursor: pointer
      background-image: url("/tdstm/static/images/swapicon.png")
      background-position: center center
      background-repeat: no-repeat
      background-size: 16px 16px
      display: inline-block
      width: 100%
      margin-top: -5px
      height: 20px
  h1
    color: #214aa0 !important
    font-weight: normal !important
    font-size: 16px !important
    margin: .8em 0 .3em 0 !important
  #deps, .deps, #commentListId
    table
      tr
        &.even
          background: #fff
        &.odd
          background: #e0e0e0
        td
          height: 30px
          &.dep-Validated
	          background: LightGreen
          &.dep-Unknown
	          background: #F9FF90
          &.dep-Questioned
	          background: LightPink
          &.dep-Not
	          background: #EEE
          &.dep-Archived
            background: #EEE
          &.dep-Future
	          background: #EEE
  #deps
    .k-grid
      border: 1px solid transparent
      padding: 0
  .clickableText
    color: $color-url-element--blue
    font-weight: bold
    cursor: pointer

  #commentListId
    table
      td
        padding: unset
    .k-grid
      border-width: 0
.url-field
  text-overflow: ellipsis
  overflow: hidden
  white-space: nowrap
  max-width: 90px
.custom-label span a, .url-field a, .url-field a:hover
  font-weight: bold
  color: black!important

.bundle-dep-validated
  span.k-input, li.move-bundle-item
    background-color: $color--green3 !important
.bundle-dep-unknown
  span.k-input, li.move-bundle-item
    background: $color--yellow !important
.bundle-dep-questioned
  span.k-input, li.move-bundle-item
    background: $color-lightpink !important
.bundle-dep-not, .bundle-dep-archived, .bundle-dep-future
  span.k-input, li.move-bundle-item
    background: $color--grey4 !important
.bundle-dep-no-valid
  span.k-input, li.move-bundle-item
    background-color: $color--red !important
    color: white !important

.bundle-dep-validated,
.bundle-dep-unknown,
.bundle-dep-questioned,
.bundle-dep-not, .bundle-dep-archived, .bundle-dep-future,
.bundle-dep-no-valid
  span.k-input
    height: 29.2px !important
  li.move-bundle-item .k-state-selected
    font-weight: bold !important

